force-app/main/default/objects/OrgInfo__c/OrgInfo__c.object-meta.xml
<CustomObject>
    <description>Base organization information retrieved during polling for the org search functionality</description>
    <label>OrgInfo</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrgInfos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>