force-app/main/default/objects/OrgInfo__c/fields/AHOrgName__c.field-meta.xml
<CustomField>
    <fullName>AHOrgName__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Organization Name pulled from the AH Salesforce Org Details table. ie: HF AM 1</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AHOrgName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>