force-app/main/default/objects/OrgInfo__c/fields/AHOrgStatus__c.field-meta.xml
<CustomField>
    <fullName>AHOrgStatus__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Status of the org as shown in the Amadeus Salesforce Org Details page (Provisioned, Trial, etc)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AHOrgStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>