force-app/main/default/objects/OrgInfo__c/fields/AHTemplateName__c.field-meta.xml
<CustomField>
    <fullName>AHTemplateName__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>HRM Template field found on the Org Details page in the AH Salesforce Org</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AHTemplateName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>