force-app/main/default/objects/OrgInfo__c/fields/AllowLimitedService__c.field-meta.xml
<CustomField>
    <fullName>AllowLimitedService__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Custom Setting found in Setup → Custom Settings → Delphi.FDC Settings / Amadeus Settings</description>
    <label>AllowLimitedService</label>
    <type>Checkbox</type>
</CustomField>