force-app/main/default/objects/OrgInfo__c/fields/BypassRules__c.field-meta.xml
<CustomField>
    <fullName>BypassRules__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Does the User object have the nisc_Bypass_Rules_for_Migrations__c field?</description>
    <label>BypassRules</label>
    <type>Checkbox</type>
</CustomField>