force-app/main/default/objects/OrgInfo__c/fields/EnableAccountSecurity__c.field-meta.xml
<CustomField>
    <fullName>EnableAccountSecurity__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Custom Setting as set in the &quot;Delphi.FDC Settings&quot; or &quot;Amadeus Settings&quot; account security area</description>
    <label>EnableAccountSecurity</label>
    <type>Checkbox</type>
</CustomField>