force-app/main/default/objects/OrgInfo__c/fields/EnableNewGuestRoomExperience__c.field-meta.xml
<CustomField>
    <fullName>EnableNewGuestRoomExperience__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Custom Setting as set in the &quot;Delphi.FDC Settings&quot; or &quot;Amadeus Settings&quot; Enable New Guestroom Experience</description>
    <label>EnableNewGuestRoomExperience</label>
    <type>Checkbox</type>
</CustomField>