force-app/main/default/objects/OrgInfo__c/fields/ErrorInfo__c.field-meta.xml
<CustomField>
    <fullName>ErrorInfo__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>If there is an error logging into the org, it will be placed here. IE: &quot;Org Locked&quot;, &quot;INVALID_LOGIN&quot;, etc</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ErrorInfo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>