force-app/main/default/objects/OrgInfo__c/fields/IsPermCount__c.field-meta.xml
<CustomField>
    <fullName>IsPermCount__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Integration Perm Set Function Room Read Count For Mark Faletra troubleshooting</description>
    <label>IsPermCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>