force-app/main/default/objects/OrgInfo__c/fields/LogCount__c.field-meta.xml
<CustomField>
    <fullName>LogCount__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Log count in this org</description>
    <label>LogCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>