force-app/main/default/objects/OrgInfo__c/fields/MajorVersion__c.field-meta.xml
<CustomField>
    <fullName>MajorVersion__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>The Major Version number of the Sales and Event package. Used for &quot;Major Version&quot; search. Patch levels are not included.</description>
    <label>MajorVersion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>