force-app/main/default/objects/OrgInfo__c/fields/MaxAccountCreateDate__c.field-meta.xml
<CustomField>
    <fullName>MaxAccountCreateDate__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>The last time an account was created in this org.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MaxAccountCreateDate</label>
    <type>DateTime</type>
</CustomField>