force-app/main/default/objects/OrgInfo__c/fields/MaxAccountModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>MaxAccountModifiedDate__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>The last time an account was modified in this org</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MaxAccountModifiedDate</label>
    <type>DateTime</type>
</CustomField>