force-app/main/default/objects/OrgInfo__c/fields/MaxLastLoginDate__c.field-meta.xml
<CustomField>
    <fullName>MaxLastLoginDate__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>The latest user login into the org. Support User and NWS users are filtered out.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MaxLastLoginDate</label>
    <type>DateTime</type>
</CustomField>