force-app/main/default/objects/OrgInfo__c/fields/MessageLogCount__c.field-meta.xml
<CustomField>
    <fullName>MessageLogCount__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Message Log count in this org</description>
    <label>MessageLogCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>