force-app/main/default/objects/OrgInfo__c/fields/OrgId__c.field-meta.xml
<CustomField>
    <fullName>OrgId__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Salesforce.Com Organization ID as pulled directly from the Org itself. This id SHOULD match the AHOrgID</description>
    <encryptionScheme>None</encryptionScheme>
    <label>OrgId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>