force-app/main/default/objects/OrgInfo__c/fields/OrgLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>OrgLastModifiedDate__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>When the data was last fetched from this org.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>OrgLastModifiedDate</label>
    <type>DateTime</type>
</CustomField>