force-app/main/default/objects/OrgInfo__c/fields/OrgName__c.field-meta.xml
<CustomField>
    <fullName>OrgName__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Organization Name as pulled directly from the Org itself</description>
    <encryptionScheme>None</encryptionScheme>
    <label>OrgName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>