force-app/main/default/objects/OrgInfo__c/fields/ProcessorLogCount__c.field-meta.xml
<CustomField>
    <fullName>ProcessorLogCount__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Processor Log count in this org</description>
    <label>ProcessorLogCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>