force-app/main/default/objects/OrgInfo__c/fields/SCPicklistEnabled__c.field-meta.xml
<CustomField>
    <fullName>SCPicklistEnabled__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Are State and Country picklists enabled in the org</description>
    <label>SCPicklistEnabled</label>
    <type>Checkbox</type>
</CustomField>