force-app/main/default/objects/OrgInfo__c/fields/TotalAccounts__c.field-meta.xml
<CustomField>
    <fullName>TotalAccounts__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Total accounts in this org</description>
    <label>TotalAccounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>