force-app/main/default/objects/OrgInfo__c/fields/TotalBookings__c.field-meta.xml
<CustomField>
    <fullName>TotalBookings__c</fullName>
    <description>Total bookings in this org</description>
    <label>TotalBookings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>