force-app/main/default/objects/OrgInfo__c/fields/UseCanvasReporting__c.field-meta.xml
<CustomField>
    <fullName>UseCanvasReporting__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Is Canvas reporting enabled in the org?</description>
    <label>UseCanvasReporting</label>
    <type>Checkbox</type>
</CustomField>