force-app/main/default/objects/OrgInfo__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>The Version string of the Sales and Event package.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>