force-app/main/default/objects/OrgInfo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OrgId__c</columns>
    <columns>AHName__c</columns>
    <columns>AHOrgName__c</columns>
    <columns>InstanceName__c</columns>
    <columns>AHOrgStatus__c</columns>
    <columns>ErrorInfo__c</columns>
    <columns>TotalAccounts__c</columns>
    <columns>MajorVersion__c</columns>
    <columns>MaxLastLoginDate__c</columns>
    <columns>OrgCreatedDate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>